# postkorb-panic

./: .gitignore  CNAME  app.js  index.html  manifest.webmanifest  scoring_function.ipynb  service-worker.js
analysis/: Analysis.ipynb  Analysis_Andy.ipynb  Analysis_Score_Optimization.ipynb  pyproject.toml
analysis/style/: lato_modern.mplstyle
css/: base.css  game.css  result.css  setup.css  start.css
data/: data.json  test.json  train.json
data_generation/: Arten_von_Schreiben.xlsx  Datengenerierung.ipynb  Datengenerierung_sprachlich_schlecht.ipynb
data_generation/.ipynb_checkpoints/: Datengenerierung-checkpoint.ipynb
data_generation/generated_data/: test_batch.json  test_extras.json  train_batch1.json  train_batch2.json  train_batch3.json
data_generation/generated_data/.ipynb_checkpoints/: test_batch2_bad_language-checkpoint.json  test_batch_bad_language-checkpoint.json  train_batch1-checkpoint.json  train_batch2_old-checkpoint.json  train_batch4-checkpoint.json  train_batch5-checkpoint.json  train_batch6-checkpoint.json  train_batch7-checkpoint.json  train_batch8-checkpoint.json
data_generation/tests/: vierte_anfragen.json
data_generation/tests/.ipynb_checkpoints/: dritte_anfragen-checkpoint.json  erste_anfragen-checkpoint.json  fuenfte_anfragen-checkpoint.json  sechste_anfragen-checkpoint.json  zweite_anfragen-checkpoint.json
model/: Analysis.ipynb  README.md  config.py  data_module.py  infer.py  label_mapping.json  pyproject.toml  train.py
