[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "captum>=0.8.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "huggingface-hub[hf-xet]>=0.31.2",
    "ipykernel>=6.29.5",
    "pytorch-lightning>=2.5.1.post0",
    "rich>=14.0.0",
    "shap>=0.47.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "transformers-interpret>=0.10.0",
]
